:bug: fix header jumping

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,10 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+html {
+  scrollbar-gutter: stable;
+}
+
 * {
   box-sizing: border-box;
 }
